--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase": "10.6.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-toastify": "0.1.14"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
