--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@editorjs/editorjs": "2.28.2",
+    "@editorjs/header": "2.8.1",
+    "@editorjs/list": "1.9.0",
+    "@editorjs/marker": "1.4.0",
+    "@editorjs/nested-list": "1.4.2",
+    "@editorjs/raw": "2.5.0",
+    "@editorjs/table": "2.3.0",
+    "@editorjs/underline": "1.1.0",
+    "@editorjs/warning": "1.4.0",
     "@headlessui/vue": "1.7.16",
     "@heroicons/vue": "2.0.18",
     "firebase": "10.6.0",
