[#49] Feat: "Editor.js 라이브러리 버전 변경"
typescript 문법 체크시 특정 기능들 type로 Import 되지 않아 수정 빌드 버전 적용

Resolve #49

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@editorjs/editorjs": "2.28.2",
+    "@editorjs/editorjs": "2.29.0-rc.7",
     "@editorjs/header": "2.8.1",
     "@editorjs/list": "1.9.0",
     "@editorjs/marker": "1.4.0",
